--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -52,6 +52,18 @@
             ],
             "django": true,
             "justMyCode": true
+        },
+        {
+            "name": "Python: Django",
+            "type": "python",
+            "request": "launch",
+            "program": "manage.py",
+            "cwd": "${workspaceFolder}/03/Superhero",
+            "args": [
+                "runserver"
+            ],
+            "django": true,
+            "justMyCode": true
         }
     ]
 }
